# galaxy-ai

./: .env.example  .gitignore  Makefile  README.md  galaxy_complete_spec.md  idea.txt  implementation_part1_foundation.md  implementation_part2_phase1.md  implementation_part3_phase2.md  implementation_part4_phase3_4.md  implementation_part5_phase5_6.md  implementation_plan.md  prompt.txt  pyproject.toml
src/galaxy/: __init__.py  __main__.py
src/galaxy/agents/: __init__.py  base.py  domain.py  master.py  registry.py  worker.py
src/galaxy/brainstorm/: __init__.py  decision_log.py  engine.py  interviewer.py  permanent_store.py  temp_store.py  types.py
src/galaxy/cli/: __init__.py  app.py  colors.py  confirm.py  keyboard.py  runner.py  setup_helper.py
src/galaxy/cognitive/: __init__.py  expander.py  pipeline.py  planner.py  reflection.py  retriever.py  synthesizer.py  types.py
src/galaxy/contracts/: __init__.py  builder.py  types.py
src/galaxy/core/: __init__.py  config.py  constants.py  exceptions.py  kernel.py  types.py  version.py
src/galaxy/events/: __init__.py  bus.py  events.py
src/galaxy/forge/: __init__.py  validator.py
src/galaxy/integrator/: __init__.py  conflict.py  engine.py  merger.py
src/galaxy/models/: __init__.py  router.py  vram.py
src/galaxy/orchestrator/: __init__.py  escalation.py  orchestrator.py  scheduler.py  task_graph.py
src/galaxy/project/: __init__.py  analyzer.py  loader.py  reconstructor.py  spec.py
src/galaxy/scaling/: __init__.py  cost_estimator.py  limiter.py
src/galaxy/terminal/: __init__.py  manager.py
src/galaxy/tools/: __init__.py  base.py  registry.py
src/galaxy/vault/: __init__.py  checkpoint.py
tests/: conftest.py
tests/e2e/: __init__.py  test_e2e_phase1.py
tests/integration/: test_agent_model_integration.py  test_brainstorm_integration.py  test_cognitive_integration.py  test_contract_integration.py  test_core_integration.py  test_e2e_phase2.py  test_orchestrator_integration.py  test_tools_integration.py
tests/unit/: __init__.py
tests/unit/test_agents/: __init__.py  test_base_agent.py  test_domain_contracts.py  test_master_cognitive.py  test_registry.py  test_worker.py  test_worker_chunks.py
tests/unit/test_brainstorm/: __init__.py  test_decision_log.py  test_engine.py  test_interviewer.py  test_permanent_store.py  test_temp_store.py  test_types.py
tests/unit/test_cognitive/: __init__.py  test_expander.py  test_pipeline.py  test_planner.py  test_reflection.py  test_retriever.py  test_synthesizer.py  test_types.py
tests/unit/test_contracts/: __init__.py  test_builder.py  test_types.py
tests/unit/test_core/: __init__.py  test_config.py  test_constants.py  test_exceptions.py  test_kernel.py  test_types.py
tests/unit/test_events/: __init__.py  test_bus.py  test_events.py
tests/unit/test_integrator/: __init__.py  test_conflict.py  test_engine.py  test_merger.py  test_types.py
tests/unit/test_models/: __init__.py  test_router.py  test_vram.py
tests/unit/test_orchestrator/: __init__.py  test_escalation.py  test_task_graph.py  test_vault.py  (+1 more)
(+34 files in other folders)
