[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "galaxy-ai"
version = "0.1.0"
description = "Galaxy AI — The AI Engineering Operating System"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Vishal Govindasamy" },
]
keywords = ["ai", "coding", "agents", "llm", "engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    # CLI & Terminal UX
    "typer>=0.12.0",
    "rich>=13.7.0",

    # Web Framework (Galaxy Studio)
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",

    # Configuration
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0",

    # Database
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.30",

    # LLM Providers
    "ollama>=0.2.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "httpx>=0.27.0",

    # Code Intelligence (Cortex)
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",

    # Embeddings & Vector Search
    "numpy>=1.26.0",

    # Terminal Management
    "libtmux>=0.37.0",

    # Async Utilities
    "anyio>=4.4.0",

    # File watching
    "watchfiles>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]
cloud = [
    "google-generativeai>=0.6.0",
    "groq>=0.8.0",
]
redis = [
    "redis[hiredis]>=5.0.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
galaxy = "galaxy.cli.app:main"

[project.urls]
Homepage = "https://github.com/VishalGovindasamy-15/galaxy-ai"
Repository = "https://github.com/VishalGovindasamy-15/galaxy-ai"
Issues = "https://github.com/VishalGovindasamy-15/galaxy-ai/issues"

# ─── Tool Configuration ───

[tool.hatch.build.targets.wheel]
packages = ["src/galaxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (E2E, requires Ollama)",
    "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN"]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["galaxy"]

[tool.coverage.run]
source = ["src/galaxy"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
